Spacing Issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -607,9 +607,17 @@ text-transform: uppercase;
 width: 100%;
 height: 400px;
 width: 100%;
-margin-top: 2rem;
+/* margin-top: 2rem; */
 object-fit: cover;
 object-position: top;
+}
+
+.infoGirl-modal  .girlImageGallery {
+  margin-top: 50px;
+}
+
+.infoGirl-modal  .girlImageGallery .col-lg-4{
+  padding: 10px;
 }
 
 .infoGirl-modal h5{
@@ -918,3 +926,10 @@ text-transform: uppercase;
 }
 
 
+.infoGirl-modal .product-card .img-wraper img{
+  height: 450px;
+}
+
+.infoGirl-modal  .product-card {
+  margin: 77px 10px 0px 10px;
+}
